--- a/about.html
+++ b/about.html
@@ -139,7 +139,7 @@
                         <article class="text-left  worktext">
                           <p>Spurge Eats was conceived on a late night after enjoying another plate of Spurge’s (very delicious) beans and rice. “Could there be more?” I asked. “How might this chef’s talent be seen by more beans, more brussel sprouts, and more garlicky dishes?” Hence, this website was born. </p> <br>
 
-                          <p>On the homepage sits a growing, adaptive list of recipes that Spurge might find inspiring. Anyone can contribute, including Spurge himself, by linking URLs, images, or PDFs to the matching <a href="https://www.are.na/t/spurge-eats-jnifkowqqxy" target="_blank">Are.na</a> board. Next lies the notebook, where some of Spurge’s best personal recipes & foods we have enjoyed together are detailed. Finally, this description page offers a reminder of how it all came to be.</p> <br>
+                          <p>On the homepage sits a growing, adaptive list of recipes that Spurge might find inspiring. Anyone can contribute, including Spurge himself, by linking URLs, images, or PDFs to the matching <a href="https://www.are.na/t/spurge-eats-jnifkowqqxy" target="_blank" class="speciala">Are.na</a> board. Next lies the notebook, where some of Spurge’s best personal recipes & foods we have enjoyed together are detailed. Finally, this description page offers a reminder of how it all came to be.</p> <br>
 
                           <p>Cheers!</p> <br>
                           <p>- T</p>
