--- a/more.html
+++ b/more.html
@@ -137,9 +137,31 @@
 
 <section>
   <div id="hidden-images">
-    <img onmouseover="hideElement('bloom')" hidden id="bloom" alt="" class="b-lazy leanright imgshadow supercede" src="images/funnyface.gif" data-src="images/work/bloom.jpeg" data-src-small="images/about_sm.jpg"/>
+    <img onmouseover="hideElement('cupnoodles')" hidden id="cupnoodles" alt="" class="b-lazy leanright imgshadow supercede" src="images/drawings/cupnoodles.png" data-src="images/drawings/cupnoodles.png" data-src-small="images/about_sm.jpg"/>
 
-    <img onmouseover="hideElement('cuttingmat')" hidden id="cuttingmat" alt="empty cutting mat" class="b-lazy leanleft supercede" src="images/funnyface.gif" data-src="images/work/cuttingmat.png" data-src-small="images/about_sm.jpg"/>
+    <img onmouseover="hideElement('ethiopian')" hidden id="ethiopian" alt="" class="b-lazy leanleft supercede" src="images/drawings/ethiopian.png" data-src="images/drawings/ethiopian.png" data-src-small="images/about_sm.jpg"/>
+
+    <img onmouseover="hideElement('burger')" hidden id="burger" alt="" class="b-lazy leanright imgshadow supercede" src="images/drawings/burger.png" data-src="images/drawings/burger.png" data-src-small="images/about_sm.jpg"/>
+
+    <img onmouseover="hideElement('ravioli')" hidden id="ravioli" alt="" class="b-lazy leanleft supercede" src="images/drawings/ravioli.png" data-src="images/drawings/ravioli.png" data-src-small="images/about_sm.jpg"/>
+
+    <img onmouseover="hideElement('kimchi')" hidden id="kimchi" alt="" class="b-lazy leanright imgshadow supercede" src="images/drawings/kimchigrilledcheese.png" data-src="images/drawings/kimchigrilledcheese.png" data-src-small="images/about_sm.jpg"/>
+
+    <img onmouseover="hideElement('beans')" hidden id="beans" alt="" class="b-lazy leanleft supercede" src="images/drawings/bean.png" data-src="images/drawings/bean.png" data-src-small="images/about_sm.jpg"/>
+
+    <img onmouseover="hideElement('chicken')" hidden id="chicken" alt="" class="b-lazy leanright imgshadow supercede" src="images/drawings/roastchicken.png" data-src="images/drawings/roastchicken.png" data-src-small="images/about_sm.jpg"/>
+
+    <img onmouseover="hideElement('dumplings')" hidden id="dumplings" alt="" class="b-lazy leanleft supercede" src="images/drawings/edamamedumplings.png" data-src="images/drawings/edamamedumplings.png" data-src-small="images/about_sm.jpg"/>
+
+    <img onmouseover="hideElement('breakfast')" hidden id="breakfast" alt="" class="b-lazy leanright imgshadow supercede" src="images/drawings/breakfast.png" data-src="images/drawings/breakfast.png" data-src-small="images/about_sm.jpg"/>
+
+    <img onmouseover="hideElement('carbonara')" hidden id="carbonara" alt="" class="b-lazy leanleft supercede" src="images/drawings/carbonara.png" data-src="images/drawings/carbonara.png" data-src-small="images/about_sm.jpg"/>
+
+    <img onmouseover="hideElement('carrotsoup')" hidden id="carrotsoup" alt="" class="b-lazy leanright imgshadow supercede" src="images/drawings/carroutsoup.png" data-src="images/drawings/carroutsoup.png" data-src-small="images/about_sm.jpg"/>
+
+    <img onmouseover="hideElement('eggyrice')" hidden id="eggyrice" alt="" class="b-lazy leanleft supercede" src="images/drawings/eggyrice.png" data-src="images/drawings/eggyrice.png" data-src-small="images/about_sm.jpg"/>
+
+    <img onmouseover="hideElement('ahituna')" hidden id="ahituna" alt="" class="b-lazy leanright imgshadow supercede" src="images/drawings/ahituna.png" data-src="images/drawings/ahituna.png" data-src-small="images/about_sm.jpg"/>
 
 
   </div>
@@ -155,7 +177,7 @@
 <!-- TEXT : works-item -->
               <div class="works-item chrome-fix works-item-one-half shared">
                     <article class="text-center worktext">
-                          <a href="cupnoodles.html" onmouseover="showElement('bloom')" onmouseout="hideElement('bloom')">cup noodles at cookies</a>
+                          <a href="cupnoodles.html" onmouseover="showElement('cupnoodles')" onmouseout="hideElement('cupnoodles')">cup noodles at cookies</a>
                     </article>                    
               </div>
 <!-- end : works-item -->
@@ -163,7 +185,7 @@
 <!-- TEXT : works-item -->
               <div class="works-item chrome-fix works-item-one-half shared">
                     <article class="text-center worktext">
-                          <a href="ethiopianplatter.html" onmouseover="showElement('cuttingmat')" onmouseout="hideElement('cuttingmat')">piassa ethiopian platter</a>
+                          <a href="ethiopian.html" onmouseover="showElement('ethiopian')" onmouseout="hideElement('ethiopian')">piassa ethiopian platter</a>
                     </article>                    
               </div>
 <!-- end : works-item -->
@@ -171,15 +193,89 @@
 <!-- TEXT : works-item -->
               <div class="works-item chrome-fix works-item-one-half shared">
                     <article class="text-center worktext">
-                          <a href="boeufbun.html" onmouseover="showElement('bloom')" onmouseout="hideElement('cuttingmat')">green monster burger</a>
+                          <a href="burger.html" onmouseover="showElement('burger')" onmouseout="hideElement('burger')">green monster burger</a>
                     </article>                    
               </div>
 <!-- end : works-item -->
 
 <!-- TEXT : works-item -->
-              <div class="works-item chrome-fix works-item-one-half">
+              <div class="works-item chrome-fix works-item-one-half byteah">
                     <article class="text-center worktext">
-                          <a href="recipe-x.html" onmouseover="showElement('cuttingmat')" onmouseout="hideElement('cuttingmat')">spinach-ricotta ravioli</a>
+                          <a href="ravioli.html" onmouseover="showElement('ravioli')" onmouseout="hideElement('ravioli')">spinach-ricotta ravioli</a>
+                    </article>                    
+              </div>
+<!-- end : works-item -->
+
+<!-- TEXT : works-item -->
+              <div class="works-item chrome-fix works-item-one-half byteah">
+                    <article class="text-center worktext">
+                          <a href="kimchi.html" onmouseover="showElement('kimchi')" onmouseout="hideElement('kimchi')">kimchi grilled cheese</a>
+                    </article>                    
+              </div>
+<!-- end : works-item -->
+
+<!-- TEXT : works-item -->
+              <div class="works-item chrome-fix works-item-one-half byspurge">
+                    <article class="text-center worktext">
+                          <a href="beans.html" onmouseover="showElement('beans')" onmouseout="hideElement('beans')">spurge's beans</a>
+                    </article>                    
+              </div>
+<!-- end : works-item -->
+
+<!-- TEXT : works-item -->
+              <div class="works-item chrome-fix works-item-one-half byteah">
+                    <article class="text-center worktext">
+                          <a href="chicken.html" onmouseover="showElement('chicken')" onmouseout="hideElement('chicken')">roasted chicken n veg</a>
+                    </article>                    
+              </div>
+<!-- end : works-item -->
+
+<!-- TEXT : works-item -->
+              <div class="works-item chrome-fix works-item-one-half shared">
+                    <article class="text-center worktext">
+                          <a href="dumplings.html" onmouseover="showElement('dumplings')" onmouseout="hideElement('dumplings')">edamame dumplings</a>
+                    </article>                    
+              </div>
+<!-- end : works-item -->
+
+<!-- TEXT : works-item -->
+              <div class="works-item chrome-fix works-item-one-half byspurge">
+                    <article class="text-center worktext">
+                          <a href="breakfast.html" onmouseover="showElement('breakfast')" onmouseout="hideElement('breakfast')">breakfast for champions</a>
+                    </article>                    
+              </div>
+<!-- end : works-item -->
+
+<!-- TEXT : works-item -->
+              <div class="works-item chrome-fix works-item-one-half byteah">
+                    <article class="text-center worktext">
+                          <a href="carbonara.html" onmouseover="showElement('carbonara')" onmouseout="hideElement('carbonara')">carbonara pasta</a>
+                    </article>                    
+              </div>
+<!-- end : works-item -->
+
+<!-- TEXT : works-item -->
+              <div class="works-item chrome-fix works-item-one-half byteah">
+                    <article class="text-center worktext">
+                          <a href="carroutsoup.html" onmouseover="showElement('carrotsoup')" onmouseout="hideElement('carrotsoup')">carrot soup</a>
+                    </article>                    
+              </div>
+<!-- end : works-item -->
+
+
+<!-- TEXT : works-item -->
+              <div class="works-item chrome-fix works-item-one-half byspurge">
+                    <article class="text-center worktext">
+                          <a href="eggyrice.html" onmouseover="showElement('eggyrice')" onmouseout="hideElement('eggyrice')">eggy rice</a>
+                    </article>                    
+              </div>
+<!-- end : works-item -->
+
+
+<!-- TEXT : works-item -->
+              <div class="works-item chrome-fix works-item-one-half shared">
+                    <article class="text-center worktext">
+                          <a href="ahituna.html" onmouseover="showElement('ahituna')" onmouseout="hideElement('ahituna')">ahi tuna</a>
                     </article>                    
               </div>
 <!-- end : works-item -->
@@ -220,11 +316,10 @@
 
   <!-- JS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<<<<<<< HEAD
    <script></script>
 
   <script></script>
-=======
+
      <!-- Create images from Are.na using an XMLHttpRequest -->
     <script>
       var xmlhttp = new XMLHttpRequest();
@@ -260,7 +355,6 @@
           document.getElementById("arena-container").innerHTML = out;
       }
     </script>
->>>>>>> 241f4099b4fa969f1b86ae6a2123a81af514dbc7
   <script src="javascripts/charming.min.js"></script>
   <script src="javascripts/anime.min.js"></script>
   <script src="javascripts/demo-tsula.js"></script>
