--- a/more.html
+++ b/more.html
@@ -137,31 +137,31 @@
 
 <section>
   <div id="hidden-images">
-    <img onmouseover="hideElement('cupnoodles')" hidden id="cupnoodles" alt="" class="b-lazy leanright imgshadow supercede" src="images/drawings/cupnoodles.png" data-src="images/drawings/cupnoodles.png" data-src-small="images/about_sm.jpg"/>
+    <p onmouseover="hideElement('cupnoodles')" hidden id="cupnoodles" alt="" class="b-lazy leanright supercede">cup noodles at cookies</p>
 
     <img onmouseover="hideElement('ethiopian')" hidden id="ethiopian" alt="" class="b-lazy leanleft supercede" src="images/drawings/ethiopian.png" data-src="images/drawings/ethiopian.png" data-src-small="images/about_sm.jpg"/>
 
-    <img onmouseover="hideElement('burger')" hidden id="burger" alt="" class="b-lazy leanright imgshadow supercede" src="images/drawings/burger.png" data-src="images/drawings/burger.png" data-src-small="images/about_sm.jpg"/>
+    <img onmouseover="hideElement('burger')" hidden id="burger" alt="" class="b-lazy leanright  supercede" src="images/drawings/burger.png" data-src="images/drawings/burger.png" data-src-small="images/about_sm.jpg"/>
 
     <img onmouseover="hideElement('ravioli')" hidden id="ravioli" alt="" class="b-lazy leanleft supercede" src="images/drawings/ravioli.png" data-src="images/drawings/ravioli.png" data-src-small="images/about_sm.jpg"/>
 
-    <img onmouseover="hideElement('kimchi')" hidden id="kimchi" alt="" class="b-lazy leanright imgshadow supercede" src="images/drawings/kimchigrilledcheese.png" data-src="images/drawings/kimchigrilledcheese.png" data-src-small="images/about_sm.jpg"/>
+    <img onmouseover="hideElement('kimchi')" hidden id="kimchi" alt="" class="b-lazy leanright  supercede" src="images/drawings/kimchigrilledcheese.png" data-src="images/drawings/kimchigrilledcheese.png" data-src-small="images/about_sm.jpg"/>
 
     <img onmouseover="hideElement('beans')" hidden id="beans" alt="" class="b-lazy leanleft supercede" src="images/drawings/bean.png" data-src="images/drawings/bean.png" data-src-small="images/about_sm.jpg"/>
 
-    <img onmouseover="hideElement('chicken')" hidden id="chicken" alt="" class="b-lazy leanright imgshadow supercede" src="images/drawings/roastchicken.png" data-src="images/drawings/roastchicken.png" data-src-small="images/about_sm.jpg"/>
+    <img onmouseover="hideElement('chicken')" hidden id="chicken" alt="" class="b-lazy leanright  supercede" src="images/drawings/roastchicken.png" data-src="images/drawings/roastchicken.png" data-src-small="images/about_sm.jpg"/>
 
     <img onmouseover="hideElement('dumplings')" hidden id="dumplings" alt="" class="b-lazy leanleft supercede" src="images/drawings/edamamedumplings.png" data-src="images/drawings/edamamedumplings.png" data-src-small="images/about_sm.jpg"/>
 
-    <img onmouseover="hideElement('breakfast')" hidden id="breakfast" alt="" class="b-lazy leanright imgshadow supercede" src="images/drawings/breakfast.png" data-src="images/drawings/breakfast.png" data-src-small="images/about_sm.jpg"/>
+    <img onmouseover="hideElement('breakfast')" hidden id="breakfast" alt="" class="b-lazy leanright  supercede" src="images/drawings/breakfast.png" data-src="images/drawings/breakfast.png" data-src-small="images/about_sm.jpg"/>
 
     <img onmouseover="hideElement('carbonara')" hidden id="carbonara" alt="" class="b-lazy leanleft supercede" src="images/drawings/carbonara.png" data-src="images/drawings/carbonara.png" data-src-small="images/about_sm.jpg"/>
 
-    <img onmouseover="hideElement('carrotsoup')" hidden id="carrotsoup" alt="" class="b-lazy leanright imgshadow supercede" src="images/drawings/carroutsoup.png" data-src="images/drawings/carroutsoup.png" data-src-small="images/about_sm.jpg"/>
+    <img onmouseover="hideElement('carrotsoup')" hidden id="carrotsoup" alt="" class="b-lazy leanright  supercede" src="images/drawings/carroutsoup.png" data-src="images/drawings/carroutsoup.png" data-src-small="images/about_sm.jpg"/>
 
     <img onmouseover="hideElement('eggyrice')" hidden id="eggyrice" alt="" class="b-lazy leanleft supercede" src="images/drawings/eggyrice.png" data-src="images/drawings/eggyrice.png" data-src-small="images/about_sm.jpg"/>
 
-    <img onmouseover="hideElement('ahituna')" hidden id="ahituna" alt="" class="b-lazy leanright imgshadow supercede" src="images/drawings/ahituna.png" data-src="images/drawings/ahituna.png" data-src-small="images/about_sm.jpg"/>
+    <img onmouseover="hideElement('ahituna')" hidden id="ahituna" alt="" class="b-lazy leanright  supercede" src="images/drawings/ahituna.png" data-src="images/drawings/ahituna.png" data-src-small="images/about_sm.jpg"/>
 
 
   </div>
@@ -177,6 +177,7 @@
 <!-- TEXT : works-item -->
               <div class="works-item chrome-fix works-item-one-half shared">
                     <article class="text-center worktext">
+                      <img data-no-retina alt="" title="" class="b-lazy img-responsive" src="images/drawings/cupnoodles.png"/>
                           <a href="cupnoodles.html" onmouseover="showElement('cupnoodles')" onmouseout="hideElement('cupnoodles')">cup noodles at cookies</a>
                     </article>                    
               </div>
@@ -185,6 +186,7 @@
 <!-- TEXT : works-item -->
               <div class="works-item chrome-fix works-item-one-half shared">
                     <article class="text-center worktext">
+                      <img data-no-retina alt="" title="" class="b-lazy img-responsive" src="images/drawings/ethiopian.png"/>
                           <a href="ethiopian.html" onmouseover="showElement('ethiopian')" onmouseout="hideElement('ethiopian')">piassa ethiopian platter</a>
                     </article>                    
               </div>
@@ -193,6 +195,7 @@
 <!-- TEXT : works-item -->
               <div class="works-item chrome-fix works-item-one-half shared">
                     <article class="text-center worktext">
+                      <img data-no-retina alt="" title="" class="b-lazy img-responsive" src="images/drawings/burger.png"/>
                           <a href="burger.html" onmouseover="showElement('burger')" onmouseout="hideElement('burger')">green monster burger</a>
                     </article>                    
               </div>
@@ -201,6 +204,7 @@
 <!-- TEXT : works-item -->
               <div class="works-item chrome-fix works-item-one-half byteah">
                     <article class="text-center worktext">
+                      <img data-no-retina alt="" title="" class="b-lazy img-responsive" src="images/drawings/ravioli.png"/>
                           <a href="ravioli.html" onmouseover="showElement('ravioli')" onmouseout="hideElement('ravioli')">spinach-ricotta ravioli</a>
                     </article>                    
               </div>
@@ -209,6 +213,7 @@
 <!-- TEXT : works-item -->
               <div class="works-item chrome-fix works-item-one-half byteah">
                     <article class="text-center worktext">
+                      <img data-no-retina alt="" title="" class="b-lazy img-responsive" src="images/drawings/kimchigrilledcheese.png"/>
                           <a href="kimchi.html" onmouseover="showElement('kimchi')" onmouseout="hideElement('kimchi')">kimchi grilled cheese</a>
                     </article>                    
               </div>
@@ -217,6 +222,7 @@
 <!-- TEXT : works-item -->
               <div class="works-item chrome-fix works-item-one-half byspurge">
                     <article class="text-center worktext">
+                      <img data-no-retina alt="" title="" class="b-lazy img-responsive" src="images/drawings/bean.png"/>
                           <a href="beans.html" onmouseover="showElement('beans')" onmouseout="hideElement('beans')">spurge's beans</a>
                     </article>                    
               </div>
@@ -343,12 +349,12 @@
           for(i = 0; i < arr.contents.length; i++) {
             if (arr.contents[i].image){
               if(arr.contents[i].attachment) {
-                out += '<div class="works-item chrome-fix works-item-one-third-spaced text-center"><a target="_blank" href=' + arr.contents[i].attachment.url + '><img class="b-lazy img-responsive imgshadow b-error bwhover" src="' + arr.contents[i].image.original.url + '"></img></a></div>';
+                out += '<div class="works-item chrome-fix works-item-one-third-spaced text-center"><a target="_blank" href=' + arr.contents[i].attachment.url + '><img class="b-lazy img-responsive  b-error bwhover" src="' + arr.contents[i].image.original.url + '"></img></a></div>';
               }
               else if(arr.contents[i].source) {
-                out += '<div class="works-item chrome-fix works-item-one-third-spaced text-center"><a target="_blank" href=' + arr.contents[i].source.url + '><img class="b-lazy img-responsive imgshadow b-error bwhover" src="' + arr.contents[i].image.original.url + '"></img></a></div>';
+                out += '<div class="works-item chrome-fix works-item-one-third-spaced text-center"><a target="_blank" href=' + arr.contents[i].source.url + '><img class="b-lazy img-responsive  b-error bwhover" src="' + arr.contents[i].image.original.url + '"></img></a></div>';
               } else {
-                out += '<div class="works-item chrome-fix works-item-one-third-spaced text-center"><a target="_blank" href=' + arr.contents[i].image.original.url + '><img class="b-lazy img-responsive imgshadow b-error bwhover" src="' + arr.contents[i].image.original.url + '"></img></a></div>';
+                out += '<div class="works-item chrome-fix works-item-one-third-spaced text-center"><a target="_blank" href=' + arr.contents[i].image.original.url + '><img class="b-lazy img-responsive  b-error bwhover" src="' + arr.contents[i].image.original.url + '"></img></a></div>';
               }
             }
           }
