--- a/notebook.html
+++ b/notebook.html
@@ -78,12 +78,11 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <header class="masthead headerborder">
 
-        <div class="valign">
+        <div class="valign headergrd">
         <div class="container-fluid"> 
             <div class="row menurules pad-top">
-                <a href="index.html" class="text-left menupad menuimg"><img class="grow" src="images/plate.png"></a>
-                <a href="more.html" class="text-center menupad menuimg"><img class="grow" src="images/notebook.png"></a>
-                <a href="about.html" class="text-right menupad menuimg"><img class="grow" src="images/thought.png"></a>
+                <a href="notebook.html" class="text-center menupad menuimg"><img class="grow" src="images/notebook.png"></a>
+                <a href="recipes.html" class="text-left menupad menuimg"><img class="grow" src="images/plate.png"></a><a href="index.html" class="text-right menupad menuimg"><img class="grow" src="images/thought.png"></a>
             </div>                
         </div>
     </div>
@@ -137,6 +136,8 @@
 
 <section>
   <div id="hidden-images">
+
+    <!--
     <p onmouseover="hideElement('cupnoodles')" hidden id="cupnoodles" alt="" class="b-lazy leanright supercede">cup noodles at cookies</p>
 
     <img onmouseover="hideElement('ethiopian')" hidden id="ethiopian" alt="" class="b-lazy leanleft supercede" src="images/drawings/ethiopian.png" data-src="images/drawings/ethiopian.png" data-src-small="images/about_sm.jpg"/>
@@ -162,7 +163,7 @@
     <img onmouseover="hideElement('eggyrice')" hidden id="eggyrice" alt="" class="b-lazy leanleft supercede" src="images/drawings/eggyrice.png" data-src="images/drawings/eggyrice.png" data-src-small="images/about_sm.jpg"/>
 
     <img onmouseover="hideElement('ahituna')" hidden id="ahituna" alt="" class="b-lazy leanright  supercede" src="images/drawings/ahituna.png" data-src="images/drawings/ahituna.png" data-src-small="images/about_sm.jpg"/>
-
+    -->
 
   </div>
 </section>  
@@ -177,8 +178,7 @@
 <!-- TEXT : works-item -->
               <div class="works-item chrome-fix works-item-one-half shared">
                     <article class="text-center worktext">
-                      <img data-no-retina alt="" title="" class="b-lazy img-responsive" src="images/drawings/cupnoodles.png"/>
-                          <a href="cupnoodles.html" onmouseover="showElement('cupnoodles')" onmouseout="hideElement('cupnoodles')">cup noodles at cookies</a>
+                          <a href="cupnoodles.html" <img data-no-retina alt="" title="" class="b-lazy img-responsive" src="images/drawings/cupnoodles.png"/>cup noodles at cookies</a>
                     </article>                    
               </div>
 <!-- end : works-item -->
@@ -187,7 +187,7 @@
               <div class="works-item chrome-fix works-item-one-half shared">
                     <article class="text-center worktext">
                       <img data-no-retina alt="" title="" class="b-lazy img-responsive" src="images/drawings/ethiopian.png"/>
-                          <a href="ethiopian.html" onmouseover="showElement('ethiopian')" onmouseout="hideElement('ethiopian')">piassa ethiopian platter</a>
+                          <a href="ethiopian.html" onmouseover="showElement('ethiopian')" onmouseout="hideElement('ethiopian')">ras ethiopian platter</a>
                     </article>                    
               </div>
 <!-- end : works-item -->
@@ -196,7 +196,7 @@
               <div class="works-item chrome-fix works-item-one-half shared">
                     <article class="text-center worktext">
                       <img data-no-retina alt="" title="" class="b-lazy img-responsive" src="images/drawings/burger.png"/>
-                          <a href="burger.html" onmouseover="showElement('burger')" onmouseout="hideElement('burger')">green monster burger</a>
+                          <a href="burger.html" onmouseover="showElement('burger')" onmouseout="hideElement('burger')">boeuf burger</a>
                     </article>                    
               </div>
 <!-- end : works-item -->
@@ -205,7 +205,7 @@
               <div class="works-item chrome-fix works-item-one-half byteah">
                     <article class="text-center worktext">
                       <img data-no-retina alt="" title="" class="b-lazy img-responsive" src="images/drawings/ravioli.png"/>
-                          <a href="ravioli.html" onmouseover="showElement('ravioli')" onmouseout="hideElement('ravioli')">spinach-ricotta ravioli</a>
+                          <a href="ravioli.html" onmouseover="showElement('ravioli')" onmouseout="hideElement('ravioli')">sexy ravioli</a>
                     </article>                    
               </div>
 <!-- end : works-item -->
@@ -301,13 +301,13 @@
 
   <!-- FOOTER
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <footer class="mastfoot footerborder">
+  <footer class="mastfoot footerborder footergrd">
     <div class="valign">
         <div class="container-fluid container-footer"> 
 
                
             <div class="row text-center">
-                <a href="index.html" class="font3 menutitle">spurge eats</a>
+                <a href="notebook.html" class="font3 menutitle">spurge eats</a>
             </div>
   
         </div>
