--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
   <!-- FOOTER
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <footer class="mastfoot footerborder">
+  <footer class="mastfoot footerborder footergrd">
     <div class="valign">
         <div class="container-fluid container-footer"> 
 
