--- a/notebook.html
+++ b/notebook.html
@@ -178,7 +178,17 @@
 <!-- TEXT : works-item -->
               <div class="works-item chrome-fix works-item-one-half shared">
                     <article class="text-center worktext">
-                          <a href="cupnoodles.html" <img data-no-retina alt="" title="" class="b-lazy img-responsive" src="images/drawings/cupnoodles.png"/>cup noodles at cookies</a>
+                      <img data-no-retina alt="" title="" class="b-lazy img-responsive" src="images/drawings/cupnoodles.png"/>
+                          <a href="cupnoodles.html">cup noodles at cookies</a>
+                    </article>                    
+              </div>
+<!-- end : works-item -->
+
+<!-- TEXT : works-item -->
+              <div class="works-item chrome-fix works-item-one-half shared">
+                    <article class="text-center worktext">
+                      <img data-no-retina alt="" title="" class="b-lazy img-responsive" src="images/drawings/ahituna.png"/>
+                          <a href="ahituna.html" >ahi tuna</a>
                     </article>                    
               </div>
 <!-- end : works-item -->
@@ -187,16 +197,7 @@
               <div class="works-item chrome-fix works-item-one-half shared">
                     <article class="text-center worktext">
                       <img data-no-retina alt="" title="" class="b-lazy img-responsive" src="images/drawings/ethiopian.png"/>
-                          <a href="ethiopian.html" onmouseover="showElement('ethiopian')" onmouseout="hideElement('ethiopian')">ras ethiopian platter</a>
-                    </article>                    
-              </div>
-<!-- end : works-item -->
-
-<!-- TEXT : works-item -->
-              <div class="works-item chrome-fix works-item-one-half shared">
-                    <article class="text-center worktext">
-                      <img data-no-retina alt="" title="" class="b-lazy img-responsive" src="images/drawings/burger.png"/>
-                          <a href="burger.html" onmouseover="showElement('burger')" onmouseout="hideElement('burger')">boeuf burger</a>
+                          <a href="ethiopian.html">ras ethiopian platter</a>
                     </article>                    
               </div>
 <!-- end : works-item -->
@@ -205,16 +206,7 @@
               <div class="works-item chrome-fix works-item-one-half byteah">
                     <article class="text-center worktext">
                       <img data-no-retina alt="" title="" class="b-lazy img-responsive" src="images/drawings/ravioli.png"/>
-                          <a href="ravioli.html" onmouseover="showElement('ravioli')" onmouseout="hideElement('ravioli')">sexy ravioli</a>
-                    </article>                    
-              </div>
-<!-- end : works-item -->
-
-<!-- TEXT : works-item -->
-              <div class="works-item chrome-fix works-item-one-half byteah">
-                    <article class="text-center worktext">
-                      <img data-no-retina alt="" title="" class="b-lazy img-responsive" src="images/drawings/kimchigrilledcheese.png"/>
-                          <a href="kimchi.html" onmouseover="showElement('kimchi')" onmouseout="hideElement('kimchi')">kimchi grilled cheese</a>
+                          <a href="ravioli.html">sexy ravioli</a>
                     </article>                    
               </div>
 <!-- end : works-item -->
@@ -223,15 +215,7 @@
               <div class="works-item chrome-fix works-item-one-half byspurge">
                     <article class="text-center worktext">
                       <img data-no-retina alt="" title="" class="b-lazy img-responsive" src="images/drawings/bean.png"/>
-                          <a href="beans.html" onmouseover="showElement('beans')" onmouseout="hideElement('beans')">spurge's beans</a>
-                    </article>                    
-              </div>
-<!-- end : works-item -->
-
-<!-- TEXT : works-item -->
-              <div class="works-item chrome-fix works-item-one-half byteah">
-                    <article class="text-center worktext">
-                          <a href="chicken.html" onmouseover="showElement('chicken')" onmouseout="hideElement('chicken')">roasted chicken n veg</a>
+                          <a href="beans.html">spurge's beans</a>
                     </article>                    
               </div>
 <!-- end : works-item -->
@@ -239,15 +223,8 @@
 <!-- TEXT : works-item -->
               <div class="works-item chrome-fix works-item-one-half shared">
                     <article class="text-center worktext">
-                          <a href="dumplings.html" onmouseover="showElement('dumplings')" onmouseout="hideElement('dumplings')">edamame dumplings</a>
-                    </article>                    
-              </div>
-<!-- end : works-item -->
-
-<!-- TEXT : works-item -->
-              <div class="works-item chrome-fix works-item-one-half byspurge">
-                    <article class="text-center worktext">
-                          <a href="breakfast.html" onmouseover="showElement('breakfast')" onmouseout="hideElement('breakfast')">breakfast for champions</a>
+                      <img data-no-retina alt="" title="" class="b-lazy img-responsive" src="images/drawings/burger.png"/>
+                          <a href="burger.html">boeuf burger</a>
                     </article>                    
               </div>
 <!-- end : works-item -->
@@ -255,39 +232,68 @@
 <!-- TEXT : works-item -->
               <div class="works-item chrome-fix works-item-one-half byteah">
                     <article class="text-center worktext">
-                          <a href="carbonara.html" onmouseover="showElement('carbonara')" onmouseout="hideElement('carbonara')">carbonara pasta</a>
+                      <img data-no-retina alt="" title="" class="b-lazy img-responsive" src="images/drawings/roastchicken.png"/>
+                          <a href="chicken.html">roasted chicken n veg</a>
                     </article>                    
               </div>
 <!-- end : works-item -->
-
-<!-- TEXT : works-item -->
-              <div class="works-item chrome-fix works-item-one-half byteah">
-                    <article class="text-center worktext">
-                          <a href="carroutsoup.html" onmouseover="showElement('carrotsoup')" onmouseout="hideElement('carrotsoup')">carrot soup</a>
-                    </article>                    
-              </div>
-<!-- end : works-item -->
-
-
-<!-- TEXT : works-item -->
-              <div class="works-item chrome-fix works-item-one-half byspurge">
-                    <article class="text-center worktext">
-                          <a href="eggyrice.html" onmouseover="showElement('eggyrice')" onmouseout="hideElement('eggyrice')">eggy rice</a>
-                    </article>                    
-              </div>
-<!-- end : works-item -->
-
 
 <!-- TEXT : works-item -->
               <div class="works-item chrome-fix works-item-one-half shared">
                     <article class="text-center worktext">
-                          <a href="ahituna.html" onmouseover="showElement('ahituna')" onmouseout="hideElement('ahituna')">ahi tuna</a>
+                      <img data-no-retina alt="" title="" class="b-lazy img-responsive" src="images/drawings/edamamedumplings.png"/>
+                          <a href="dumplings.html" >edamame dumplings</a>
+                    </article>                    
+              </div>
+<!-- end : works-item -->
+
+<!-- TEXT : works-item -->
+              <div class="works-item chrome-fix works-item-one-half byspurge">
+                    <article class="text-center worktext">
+                      <img data-no-retina alt="" title="" class="b-lazy img-responsive" src="images/drawings/eggyrice.png"/>
+                          <a href="eggyrice.html">eggy rice</a>
+                    </article>                    
+              </div>
+<!-- end : works-item -->
+
+<!-- TEXT : works-item -->
+              <div class="works-item chrome-fix works-item-one-half byspurge">
+                    <article class="text-center worktext">
+                      <img data-no-retina alt="" title="" class="b-lazy img-responsive" src="images/drawings/breakfast.png"/>
+                          <a href="breakfast.html">breakfast for champions</a>
+                    </article>                    
+              </div>
+<!-- end : works-item -->
+
+
+<!-- TEXT : works-item -->
+              <div class="works-item chrome-fix works-item-one-half byteah">
+                    <article class="text-center worktext">
+                      <img data-no-retina alt="" title="" class="b-lazy img-responsive" src="images/drawings/carroutsoup.png"/>
+                          <a href="carroutsoup.html">carrot soup</a>
+                    </article>                    
+              </div>
+<!-- end : works-item -->
+
+<!-- TEXT : works-item -->
+              <div class="works-item chrome-fix works-item-one-half byteah">
+                    <article class="text-center worktext">
+                      <img data-no-retina alt="" title="" class="b-lazy img-responsive" src="images/drawings/kimchigrilledcheese.png"/>
+                          <a href="kimchi.html">kimchi grilled cheese</a>
                     </article>                    
               </div>
 <!-- end : works-item -->
 
 
 
+<!-- TEXT : works-item -->
+              <div class="works-item chrome-fix works-item-one-half byteah">
+                    <article class="text-center worktext">
+                      <img data-no-retina alt="" title="" class="b-lazy img-responsive" src="images/drawings/carbonara.png"/>
+                          <a href="carbonara.html">carbonara pasta</a>
+                    </article>                    
+              </div>
+<!-- end : works-item -->
 
 
               </section>
