--- a/recipe-x.html
+++ b/recipe-x.html
@@ -121,14 +121,12 @@
     <div class="newborder container">
       <section id="works-container" class="works-container works-masonry-container clearfix works-thumbnails-view pad-top pad-bottom">
 
-
-<!-- TEXT : works-item -->
-              <div class="works-item chrome-fix works-item-full-width">
-                    <article class="text-center bigletters">
-                          <h1 class="menutitle">Spurge's Classic Beans</h1>
-                    </article>                    
+<!-- IMG : works-item -->
+              <div class="works-item chrome-fix works-item-full-width ">
+                      <img data-no-retina alt="" title="" class="b-lazy img-responsive" src="images/drawings/bean.png"/>
               </div>
 <!-- end : works-item -->
+
 
 <!-- TEXT : works-item -->
               <div class="works-item chrome-fix works-item-full-width">
@@ -141,17 +139,15 @@
 <!-- TEXT : works-item -->
               <div class="works-item chrome-fix works-item-full-width">
               <article class="text-center medletters">
-              <h2>egg yolks</h2><br>
-              <h2>rigatoni</h2><br>
-              <h2>salt</h2><br>
-              <h2>pep</h2><br>
-              <h2>ingredient</h2><br>
-              <h2>ingredient</h2><br>
-
+              <h2>egg yolks</h2>
+              <h2>rigatoni</h2>
+              <h2>salt</h2>
+              <h2>pep</h2>
+              <h2>ingredient</h2>
+              <h2>ingredient</h2>
             </article>
               </div>
 <!-- end : works-item -->
-
 
 <!-- TEXT : works-item -->
               <div class="works-item chrome-fix works-item-full-width">
@@ -164,17 +160,10 @@
               </div>
 <!-- end : works-item -->
 
-<!-- IMG : works-item -->
-              <div class="works-item chrome-fix works-item-full-width ">
-                      <img data-no-retina alt="" title="" class="b-lazy img-responsive" src="images/drawings/bean.png"/>
-              </div>
-<!-- end : works-item -->
-
-
 <!-- TEXT : works-item -->
               <div class="works-item chrome-fix works-item-full-width">
                     <article class="text-center seealso">
-                          <a href="notebook.html" class="font3 menutitle">more...</a>
+                          <a href="notebook.html" class="font3 menutitle">eat more...</a>
                     </article>
               </div>
 <!-- end : works-item -->
@@ -191,7 +180,7 @@
 
   <!-- FOOTER
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <footer class="mastfoot footerborder">
+  <footer class="mastfoot footerborder footergrd">
     <div class="valign">
         <div class="container-fluid container-footer"> 
 
